--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
-    <!-- VIDEO TRIMMER -->
-    <color name="background_video_color">#2f3031</color>
-    <color name="background_progress_color">#6C6D6D</color>
-    <color name="progress_color">@color/colorPrimary</color>
-    <color name="line_color">#FF15FF00</color>
-    <color name="shadow_color">#FF000000</color>
-    <color name="line_button">#565758</color>
-    <color name="black_translucent">#50000000</color>
+    <color name="colorPrimary">#64dd17</color>
+    <color name="colorPrimaryDark">#50b90e</color>
+    <color name="colorAccent">#718663</color>
+    <color name="colorBackground">#dedede</color>
 </resources>
