--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorBackground"
     style="@style/scrollbarStyleVertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:scrollbarDefaultDelayBeforeFade="1000"
     android:scrollbarFadeDuration="5000"
     tools:context="com.blackbox.ffmpeg.examples.MainActivity">
 
-    <FrameLayout
+    <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        app:alignmentMode="alignMargins"
+        app:columnCount="2"
+        app:columnOrderPreserved="true"
+        app:rowOrderPreserved="true"
+        app:useDefaultMargins="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingTop="30dp">
 
-            <Button
-                android:id="@+id/btn_split_video"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Split Video" />
+        <Button
+            android:id="@+id/btn_create_movie"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_make_movie"
+            app:layout_column="0"
+            app:layout_row="1" />
 
-            <Button
-                android:id="@+id/btn_create_movie"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Make Movie" />
+        <Button
+            android:id="@+id/btn_resize_video"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_resize_video"
+            app:layout_column="0"
+            app:layout_row="2" />
 
-            <Button
-                android:id="@+id/btn_trim_audio"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Trim Audio" />
+        <Button
+            android:id="@+id/btn_split_video"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_split_video"
+            app:layout_column="0"
+            app:layout_row="3" />
 
-            <Button
-                android:id="@+id/btn_trim_video"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Trim Video" />
+        <Button
+            android:id="@+id/btn_trim_video"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_trim_video"
+            app:layout_column="1"
+            app:layout_row="1" />
 
-            <Button
-                android:id="@+id/btn_merge_audio_video"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Merge Audio Video" />
+        <Button
+            android:id="@+id/btn_text_on_video"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_text_on_video"
+            app:layout_column="1"
+            app:layout_row="2" />
 
-            <Button
-                android:id="@+id/btn_resize_video"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Resize Video" />
+        <Button
+            android:id="@+id/btn_merge_audio_video"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_merge_audio_video"
+            app:layout_column="1"
+            app:layout_row="3" />
 
-            <Button
-                android:id="@+id/btn_video_to_gif"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Video 2 GIF" />
 
-            <Button
-                android:id="@+id/btn_video_to_images"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Video 2 Images" />
+        <Button
+            android:id="@+id/btn_trim_audio"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_trim_audio"
+            app:layout_column="0"
+            app:layout_row="6" />
 
-            <Button
-                android:id="@+id/btn_text_on_video"
-                style="@style/ButtonStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Text On Video" />
+        <Button
+            android:id="@+id/btn_extract_audio"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_extract_audio"
+            app:layout_column="1"
+            app:layout_row="6" />
 
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_video_to_gif"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_video_to_gif"
+            app:layout_column="0"
+            app:layout_row="8" />
 
-    </FrameLayout>
+        <Button
+            android:id="@+id/btn_video_to_images"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_video_to_images"
+            app:layout_column="1"
+            app:layout_row="8" />
+
+        <Button
+            android:id="@+id/textView"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:gravity="start|center_vertical"
+            android:text="@string/txt_audio_section"
+            android:textAllCaps="false"
+            android:textColor="@color/colorHeading"
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_columnSpan="2"
+            app:layout_row="5"
+            app:layout_rowSpan="1" />
+
+        <Button
+            android:id="@+id/textView2"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:gravity="start|center_vertical"
+            android:text="@string/txt_video_section"
+            android:textAllCaps="false"
+            android:textColor="@color/colorHeading"
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_columnSpan="2"
+            app:layout_row="0"
+            app:layout_rowSpan="1" />
+
+        <Button
+            android:id="@+id/textView3"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:gravity="start|center_vertical"
+            android:text="@string/txt_image_section"
+            android:textAllCaps="false"
+            android:textColor="@color/colorHeading"
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_columnSpan="2"
+            app:layout_row="7"
+            app:layout_rowSpan="1" />
+
+    </android.support.v7.widget.GridLayout>
 
 </android.support.v4.widget.NestedScrollView>
