--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:paddingRight">5dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">10dp</item>
     </style>
 
     <style name="scrollbarStyleVertical">
