--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,13 +95,22 @@
             app:layout_row="6" />
 
         <Button
+            android:id="@+id/btn_merge_audio"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_merge_audio"
+            app:layout_column="0"
+            app:layout_row="7" />
+
+        <Button
             android:id="@+id/btn_video_to_gif"
             style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txt_video_to_gif"
             app:layout_column="0"
-            app:layout_row="8" />
+            app:layout_row="9" />
 
         <Button
             android:id="@+id/btn_video_to_images"
@@ -110,7 +119,7 @@
             android:layout_height="wrap_content"
             android:text="@string/txt_video_to_images"
             app:layout_column="1"
-            app:layout_row="8" />
+            app:layout_row="9" />
 
         <Button
             android:id="@+id/textView"
@@ -154,7 +163,7 @@
             android:textSize="24sp"
             app:layout_column="0"
             app:layout_columnSpan="2"
-            app:layout_row="7"
+            app:layout_row="8"
             app:layout_rowSpan="1" />
 
     </android.support.v7.widget.GridLayout>
