--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,15 @@
             app:layout_column="1"
             app:layout_row="3" />
 
+        <Button
+            android:id="@+id/btn_merge_videos"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_merge_videos"
+            app:layout_column="0"
+            app:layout_row="4" />
+
 
         <Button
             android:id="@+id/btn_trim_audio"
